Don't use implicitSize when calculating implicit size

Width/height ended up getting trapped at <0 in this fillMode if only one
of witdh/height was explicit.

Task-number: QTBUG-16389
Reviewed-by: Michael Brasser